--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <img id="pos" class="card-img-top" src="" width="30%" alt=""/>
       <form action="sql.php" method="post" class="card">
         <!--texto plano-->
-        <textarea id="resultado" class="card-text" placeholder="Texto"></textarea></br>
+        <textarea id="resultado" class="card-text"></textarea></br>
         <div id="box_fact" style="display:none;">
           <div class="card-header">
             <b><p id="title"><p></b>
@@ -46,7 +46,26 @@
                       <p id="title6"><p>
           </div>
           <div class="card-body">
-            <p id="content"><p>
+            <p id="content"><p></br>
+            <table style="margin:auto;">
+              <tr>
+                <th>Código</th>
+                <th>Descripción</th>
+                <th>Unidad</th>
+                <th>Cantidad</th>
+                <th>V.Unit</th>
+                <th>Valor Total</th>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </table>
+              <p id="content2"><p>
           </div>
         </div>
 
