--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </div>
   </br>
     <div class="cards">
-      <img id="pos" class="card-img-top" src="" width="30%" alt=""/>
+      <img id="pos" class="card-img-top" src="" width="30%" alt=""/></br>
+      <textarea id="resultado" class="card-text" placeholder="No se a analizado una imagen"></textarea></br>
       <form action="sql.php" method="post" class="card">
         <!--texto plano-->
-        <textarea id="resultado" class="card-text"></textarea></br>
         <div id="box_fact" style="display:none;">
           <div class="card-header">
             <b><p id="title"><p></b>
