--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </br>
     <div class="cards">
       <img id="pos" class="card-img-top" src="" width="30%" alt=""/></br>
-      <textarea id="resultado" class="card-text" placeholder="No se a analizado una imagen"></textarea></br>
+      <textarea id="resultado" class="card-text" placeholder="No se a analizado una imagen"></textarea></br></br>
       <form action="sql.php" method="post" class="card">
         <!--texto plano-->
         <div id="box_fact" style="display:none;">
